--- a/dotgraph-scala-dsl-maven/pom.xml
+++ b/dotgraph-scala-dsl-maven/pom.xml
@@ -5,13 +5,13 @@
 
   <artifactId>dotgraph-scala-dsl-maven</artifactId>
   <name>dotgraph-scala-dsl-maven</name>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <description>Dot API Scala Flavour - Maven DSL</description>
 
   <parent>
     <groupId>de.visualdigits</groupId>
     <artifactId>dotgraph-scala</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>de.visualdigits</groupId>
       <artifactId>dotgraph-scala-core</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.1-SNAPSHOT</version>
     </dependency>
 
     <!--scala -->
@@ -31,6 +31,18 @@
     <dependency>
       <groupId>com.beachape</groupId>
       <artifactId>enumeratum_${scala-version}</artifactId>
+    </dependency>
+
+    <!-- jackson -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-scala_${scala-version}</artifactId>
+      <version>2.10.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.10.3</version>
     </dependency>
 
     <!-- testing -->
