--- a/.github/workflows/scala-test.yml
+++ b/.github/workflows/scala-test.yml
@@ -4,14 +4,11 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: olafurpg/setup-scala@v11
       with:
-        java-version: 1.8
+        java-version: openjdk@1.8
     - name: Run tests
       run: mvn clean test
