--- a/pom.xml
+++ b/pom.xml
@@ -166,4 +166,18 @@
       </plugins>
     </pluginManagement>
   </build>
+
+  <profiles>
+    <profile>
+      <id>github</id>
+      <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub Packages</name>
+          <url>https://maven.pkg.github.com/sknull/dotgraph-scala</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+  </profiles>
+
 </project>
