--- a/.github/workflows/scala-test.yml
+++ b/.github/workflows/scala-test.yml
@@ -7,8 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: olafurpg/setup-scala@v11
+    - uses: actions/setup-java@v1
       with:
-        java-version: openjdk@1.8
+        java-version: 1.8
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v4
+      with:
+        maven-version: 3.5.4
     - name: Run tests
       run: mvn clean test
