--- a/dotgraph-scala-core/pom.xml
+++ b/dotgraph-scala-core/pom.xml
@@ -30,17 +30,18 @@
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala-version}</artifactId>
-      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scalatestplus</groupId>
+      <artifactId>junit-4-13_${scala-version}</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.novocode</groupId>
       <artifactId>junit-interface</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
