try to deploy package

--- a/.github/workflows/scala-test.yml
+++ b/.github/workflows/scala-test.yml
@@ -15,4 +15,4 @@ jobs:
       with:
         maven-version: 3.5.4
     - name: Compile
-      run: mvn clean compile test
+      run: mvn clean compile test deploy
