--- a/.github/workflows/scala-test.yml
+++ b/.github/workflows/scala-test.yml
@@ -6,13 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v2
       with:
         java-version: 1.8
     - name: Set up Maven
       uses: stCarolas/setup-maven@v4
       with:
-        maven-version: 3.5.4
+        maven-version: 3.8.1
     - name: Compile
-      run: mvn clean compile test deploy -Pgithub
+      run: mvn clean compile test
