--- a/.github/workflows/scala-test.yml
+++ b/.github/workflows/scala-test.yml
@@ -9,7 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        java-version: '8'
+        distribution: 'adopt'
     - name: Set up Maven
       uses: stCarolas/setup-maven@v4
       with:
