--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
             </includes>
           </configuration>
         </plugin>
+        
         <!-- enable scalatest -->
         <plugin>
           <groupId>org.scalatest</groupId>
@@ -146,30 +147,26 @@
             </execution>
           </executions>
         </plugin>
+        
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
         </plugin>
+        
+        <!-- generate source jar -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.4</version>
-          <configuration>
-            <descriptorRefs>
-              <descriptorRef>jar-with-dependencies</descriptorRef>
-            </descriptorRefs>
-          </configuration>
+          <artifactId>maven-source-plugin</artifactId>
           <executions>
             <execution>
-              <phase>package</phase>
+              <id>attach-sources</id>
               <goals>
-                <goal>single</goal>
+                <goal>jar</goal>
               </goals>
             </execution>
           </executions>
-        </plugin>
-      </plugins>
+        </plugin>      </plugins>
     </pluginManagement>
   </build>
 
@@ -182,6 +179,22 @@
           <name>GitHub Packages</name>
           <url>https://maven.pkg.github.com/sknull/dotgraph-scala</url>
         </repository>
+      </distributionManagement>
+    </profile>
+    
+    <profile>
+      <id>newsaktuell</id>
+      <distributionManagement>
+        <repository>
+          <id>releases</id>
+          <name>Internal Releases</name>
+          <url>https://nexus.service.dint.newsaktuell.de/repository/maven-releases</url>
+        </repository>
+        <snapshotRepository>
+          <id>snapshots</id>
+          <name>Internal Snapshots</name>
+          <url>https://nexus.service.dint.newsaktuell.de/repository/maven-snapshots</url>
+        </snapshotRepository>
       </distributionManagement>
     </profile>
   </profiles>
